--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -17,13 +17,16 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+     "plugin:cypress/recommended"
+    
+
     ]
   },
   "browserslist": {
@@ -37,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^8.6.0",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
